--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".paletas"></activity>
+        <activity android:name=".paletas" />
+        <activity android:name=".categorias"></activity>
     </application>
 
 </manifest>
